third_party/move/move-compiler-v2/tests/checking/typing/implicit_deref_borrow_field_internal.exp

Diagnostics:
error: Invalid access of field `f` on external type `X::S`
   ┌─ tests/checking/typing/implicit_deref_borrow_field_internal.move:12:9
   │
12 │     fun t0() {
   │         ^^
13 │         (X::s().f: u64);
   │          -------- accessed here

error: Invalid access of field `f` on external type `X::S`
   ┌─ tests/checking/typing/implicit_deref_borrow_field_internal.move:12:9
   │
12 │     fun t0() {
   │         ^^
   ·
15 │         (s.f: u64);
   │          --- accessed here
